// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`match played to a decision > reaches a winner and matches the recorded outcome 1`] = `
{
  "matchWinner": 1,
  "p1": {
    "hp": 0,
    "state": "KO",
    "x": 528.7381,
  },
  "p2": {
    "hp": 35.1507,
    "state": "VICTORY",
    "x": 701.7463,
  },
  "phase": "ending",
  "round": 2,
  "roundWins": [
    0,
    2,
  ],
  "tick": 2724,
}
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 1`] = `
[
  "t150:eae66c3c",
  "t300:1a93ad2e",
  "t450:a2770d1c",
  "t600:902e39d0",
  "t750:fee64d0a",
  "t900:59e72862",
]
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 66.4192,
    "state": "HEAVY_ATTACK",
    "x": 529.0595,
  },
  "p2": {
    "hp": 100,
    "state": "BLOCKSTUN",
    "x": 722.77,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 900,
}
`;

exports[`projectile and zone characters > matches the recorded checksum trail 1`] = `
[
  "t120:8b818a98",
  "t240:4cd819f1",
  "t360:861fee0c",
  "t480:267175b",
  "t600:90ef117c",
  "t720:a07d7a40",
  "t840:35858374",
]
`;

exports[`two-player scripted match > matches the recorded checksum trail 1`] = `
[
  "t120:86b80fc9",
  "t240:b34b8c7d",
  "t360:29eca8c6",
  "t480:5bb77d39",
  "t600:213c7188",
  "t720:ff2761cc",
  "t840:3b2a4eb6",
  "t960:5b83ef0",
  "t1080:e06bda1a",
  "t1200:5b344667",
]
`;

exports[`two-player scripted match > matches the recorded final state 1`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 14.9986,
    "state": "LIGHT_ATTACK",
    "x": 160.9074,
  },
  "p2": {
    "hp": 100,
    "state": "ULTIMATE",
    "x": 765.0625,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 1200,
}
`;
